// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rendering should match, with a tvshowName 1`] = `
<Styled(ListItem)
  avatar={true}
  onPress={[Function]}
>
  <Styled(Left)>
    <Styled(Thumbnail)
      source={
        Object {
          "uri": "http://poster.png",
        }
      }
      square={true}
    />
  </Styled(Left)>
  <Styled(Body)>
    <Styled(Text)>
      Deadwood
       
      <Styled(Text)
        style={
          Object {
            "color": "gray",
            "fontStyle": "italic",
          }
        }
      >
        (
        1
        )
      </Styled(Text)>
    </Styled(Text)>
    <Styled(Text)
      note={true}
    >
      Renaud, Sylvain 
    </Styled(Text)>
  </Styled(Body)>
</Styled(ListItem)>
`;

exports[`Rendering should match, with empty tvshowName and poster 1`] = `
<Styled(ListItem)
  avatar={true}
  onPress={[Function]}
>
  <Styled(Left)>
    <Styled(Button)
      style={
        Object {
          "width": 57,
        }
      }
      transparent={true}
    />
  </Styled(Left)>
  <Styled(Body)>
    <Styled(Text)>
       
      <Styled(Text)
        style={
          Object {
            "color": "gray",
            "fontStyle": "italic",
          }
        }
      >
        (
        1
        )
      </Styled(Text)>
    </Styled(Text)>
    <Styled(Text)
      note={true}
    >
      Renaud, Sylvain 
    </Styled(Text)>
  </Styled(Body)>
</Styled(ListItem)>
`;
